test/stg/error/con1.stg
-- lowercase constructor
foo = CON(i 1);
